CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(DEFINED CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE} CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
ELSE()
  SET(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
ENDIF()

INCLUDE (CheckIncludeFileCXX)
INCLUDE (CMakeDependentOption)

PROJECT(Elementum)

SET( CMAKE_MODULE_PATH
  ${CMAKE_MODULE_PATH}
  ${CMAKE_CURRENT_SOURCE_DIR}/CMake
  ${CMAKE_CURRENT_SOURCE_DIR}/CMake/Packages )

IF(APPLE)
  SET(ENV{CMAKE_OSX_ARCHITECTURES} "i386")
  SET(Boost_USE_STATIC_LIBS ON)
ENDIF()

FIND_PACKAGE(PkgConfig)

#~ FIND_PACKAGE(RakNet REQUIRED)
FIND_PACKAGE(Boost 1.46 COMPONENTS filesystem thread date_time system REQUIRED)
FIND_PACKAGE(log4cpp REQUIRED)
FIND_PACKAGE(Lua51 REQUIRED)
FIND_PACKAGE(EShared REQUIRED)
FIND_PACKAGE(OGRE REQUIRED)
FIND_PACKAGE(OIS REQUIRED)
FIND_PACKAGE(CEGUI REQUIRED)
#FIND_PACKAGE(OpenAL REQUIRED)
#FIND_PACKAGE(OGG REQUIRED)
#FIND_PACKAGE(VorbisFile REQUIRED)

# project version
SET( ${PROJECT_NAME}_MAJOR_VERSION 0 )
SET( ${PROJECT_NAME}_MINOR_VERSION 1 )
SET( ${PROJECT_NAME}_BUILD_LEVEL 1 )

#ADD_DEFINITIONS("-std=c++0x")
#SET(CMAKE_VERBOSE_MAKEFILE 1)

INCLUDE_DIRECTORIES(
  include
  modules/include
  modules/include/pixy
  #~ ${RakNet_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS}
  ${LOG4CPP_INCLUDE_DIR}
  ${LUA_INCLUDE_DIR}
  ${ESHARED_INCLUDE_DIRS}
  ${OGRE_INCLUDE_DIRS}
  ${OIS_INCLUDE_DIRS}
  ${CEGUI_INCLUDE_DIRS}
  #${OPENAL_INCLUDE_DIRS}
  #${OGG_INCLUDE_DIRS}
  #${VORBISFILE_INCLUDE_DIRS}
  /usr/local/include
  /usr/local/include/OGRE/Plugins/ParticleUniverse)

ADD_SUBDIRECTORY(modules)
ADD_SUBDIRECTORY(src)
